Added welcome message

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <h1>JKL Targets</h1>
-    <p>This is a temporary website currently under development</p>
+    <marquee bgcolor = "yellow"height = "100" scrollamount = "10" >
+        <p>
+            <font size = "10">
+            This is a temporary website currently under development
+            </font>
+        </p>
+    </marquee>
 
 </body>
 </html>
