--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>JKL Targets</title>
 </head>
 <body>
-    <h1>JKL Targets</h1>
+    <h1 align = "center">JKL Targets</h1>
     <marquee bgcolor = "yellow"height = "100" scrollamount = "10" >
         <p>
             <font size = "10">
